# mojox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: RELEASING.md
.github/workflows/: ci.yml  release.yml
mojox/: __init__.py  _cli.py
