[project]
name = "mojox"
version = "0.1.0"
description = "CLI wrapper for Mojo with automatic package discovery"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mojo-compiler"]

[project.scripts]
mojox = "mojox._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
