[project]
name = "mojox"
version = "0.1.0"
description = "CLI wrapper for Mojo with automatic package discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mojo-compiler"]
authors = [{name = "Conobi"}]

[project.urls]
Repository = "https://github.com/Conobi/mojox"

[project.scripts]
mojox = "mojox._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
