[project]
name = "mojox-workspace"
version = "0"
description = "Workspace root for the mojox ecosystem (mojox + mojox-build)."
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
mojox       = { workspace = true }
mojox-build = { workspace = true }
